# fixcache

./: .gitignore  .omc-teardown-gemini.md  .omc-teardown-glm.md  CLAUDE.md  CUT_STATUS.md  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: self-test.yml
_graveyard/lore_memory/: doctor.py  hooks.py  ingest.py  prefetch.py  sync.py
_graveyard/tests/: test_doctor.py  test_prefetch.py  test_windsurf_sync.py
bench/: README.md  build_corpus_v2.py  corpus.jsonl  corpus_v2.jsonl  results.md  run_collapse.py
demo/: demo.sh  hn-post.md
lore_memory/: __init__.py  cli.py  cognition.py  config.py  darwin.py  darwin_replay.py  fingerprint.py  hooks.py  ingest.py  sync.py  util.py  watch.py
lore_memory/core/: __init__.py  schema.py  store.py  wal.py
lore_memory/extraction/: __init__.py
lore_memory/layers/: __init__.py  identity.py
lore_memory/mcp/: __init__.py  server.py  tools.py
lore_memory/pipeline/: __init__.py
packs/: python-starter.toml
scripts/: ci_classify.py  ingest_swesmith.py  pack_export.py  pack_import.py
scripts/packs/: fixcache-python-basics.toml
tests/: conftest.py  test_adversarial_v2.py  test_cli.py  test_cognition.py  test_darwin.py  test_darwin_replay.py  test_dogfood_regression.py  test_fingerprint_hardening.py  test_ingest.py  test_killshot_integration.py  test_layers.py  test_mcp.py  test_mcp_protocol_hardening.py  test_property_fuzz.py  test_security_hardening.py  test_store.py  test_sync.py  test_watch.py  test_watch_hardening.py
