[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fixcache"
version = "0.4.0"
description = "The procedural memory layer for AI coding agents. Fingerprints stderr, matches to learned fix recipes, tracks efficacy. Zero dependencies, local-first, MCP-native."
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Miles Sage"},
]
readme = "README.md"
keywords = ["ai", "memory", "mcp", "claude", "agent", "llm", "sqlite", "fix-cache", "error-recovery", "procedural-memory", "cursor", "windsurf", "codex", "claude-code"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Environment :: Console",
    "Operating System :: OS Independent",
]

dependencies = [
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/Miles0sage/fixcache"
Repository = "https://github.com/Miles0sage/fixcache"
Issues = "https://github.com/Miles0sage/fixcache/issues"
Changelog = "https://github.com/Miles0sage/fixcache/releases"

[project.optional-dependencies]
neural = [
    "onnxruntime>=1.17",
]
gemma = [
    "llama-cpp-python>=0.2",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
fixcache = "lore_memory.cli:main"
fixcache-mcp = "lore_memory.mcp.server:main"
# transitional aliases (v0.4.x) — will be removed in v0.5.0
lore-memory = "lore_memory.cli:main"
lore-memory-mcp = "lore_memory.mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["lore_memory*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["lore_memory"]
omit = ["tests/*"]
